docs: update roadmap

--- a/src/docs/guides/doc/roadmap.en-US.mdx
+++ b/src/docs/guides/doc/roadmap.en-US.mdx
@@ -24,9 +24,14 @@ export const data = [
     name: '✅ Collaboration',
   },
   {
+    start: '2024/06',
+    end: '2024/07',
+    name: '✅ Comments',
+  },
+  {
     start: '2024/07',
-    end: '2024/09',
-    name: '🏃 Hyperlinks',
+    end: '2024/07',
+    name: '✅ Hyperlinks',
   },
   {
     start: '2024/07',
@@ -41,7 +46,7 @@ export const data = [
   {
     start: '2024/06',
     end: '2024/07',
-    name: '🏃 Floating Images',
+    name: '✅ Floating Images',
   }
 ]
 
