--- a/src/docs/guides/doc/roadmap.zh-CN.mdx
+++ b/src/docs/guides/doc/roadmap.zh-CN.mdx
@@ -24,9 +24,14 @@ export const data = [
     name: '✅ 多人协同',
   },
   {
+    start: '2024/06',
+    end: '2024/07',
+    name: '✅ 批注',
+  },
+  {
     start: '2024/07',
-    end: '2024/09',
-    name: '🏃 超链接',
+    end: '2024/07',
+    name: '✅ 超链接',
   },
   {
     start: '2024/07',
@@ -41,7 +46,7 @@ export const data = [
   {
     start: '2024/06',
     end: '2024/07',
-    name: '🏃 浮动图片',
+    name: '✅ 浮动图片',
   }
 ]
 
