--- a/src/docs/guides/sheet/roadmap.en-US.mdx
+++ b/src/docs/guides/sheet/roadmap.en-US.mdx
@@ -66,12 +66,12 @@ export const data = [
   {
     start: '2024/01',
     end: '2024/02',
-    name: '✅ Printing (Pro)'
+    name: '✅ Printing'
   },
   {
     start: '2024/01',
     end: '2024/03',
-    name: '✅ Import / Export (Pro)'
+    name: '✅ Import / Export'
   }
 ]
 
