--- a/src/docs/guides/sheet/roadmap.zh-CN.mdx
+++ b/src/docs/guides/sheet/roadmap.zh-CN.mdx
@@ -66,12 +66,12 @@ export const data = [
   {
     start: '2024/01',
     end: '2024/02',
-    name: '✅ 打印（Pro）'
+    name: '✅ 打印'
   },
   {
     start: '2024/01',
     end: '2024/03',
-    name: '✅ 导入导出（Pro）'
+    name: '✅ 导入导出'
   }
 ]
 
