--- a/src/docs/guides/slide/roadmap.en-US.mdx
+++ b/src/docs/guides/slide/roadmap.en-US.mdx
@@ -14,6 +14,11 @@ You can submit your requirements through Feature Requests, please refer to the [
 
 export const data = [
   {
+    start: '2024/07',
+    end: '2025/08',
+    name: '🏃 MVP (Text, Shape)',
+  },
+  {
     start: '2024/09',
     end: '2025/03',
     name: '🏃 Main Features',
