--- a/src/docs/guides/slide/roadmap.zh-CN.mdx
+++ b/src/docs/guides/slide/roadmap.zh-CN.mdx
@@ -14,6 +14,11 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 export const data = [
   {
+    start: '2024/07',
+    end: '2025/08',
+    name: '🏃 MVP（文字、形状）',
+  },
+  {
     start: '2024/09',
     end: '2025/03',
     name: '🏃 核心功能',
