docs: add docs-comment docs

--- a/src/docs/guides/general/introduction.en-US.mdx
+++ b/src/docs/guides/general/introduction.en-US.mdx
@@ -114,7 +114,13 @@ export const features = [{
 #### Editing Operations
 
 - Text Styles: bold, italic, underline, strike through, font family, font size, text color
+- Comments
+- Insert floating images
 - Collaborative editing
+
+#### Typesetting
+
+- Header and footer
 
 ### 📽️ Slides
 
