--- a/src/docs/guides/general/introduction.zh-CN.mdx
+++ b/src/docs/guides/general/introduction.zh-CN.mdx
@@ -115,7 +115,13 @@ export const features = [{
 #### 编辑操作
 
 - 文本样式：加粗、斜体、下划线、删除线、字体、字号、字体颜色
+- 评论
+- 插入浮动图片
 - 协同编辑
+
+#### 排版
+
+- 页眉页脚
 
 ### 📽️ 演示文稿功能支持
 
