--- a/src/docs/guides/sheet/features/zen-editor.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/zen-editor.zh-CN.mdx
@@ -1,9 +1,14 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
+
+import entryFile from './zen-editor/demo-1/index.txt'
 
 # 禅编辑器
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
+
+<Sandbox entryFile={entryFile} />
 
 禅编辑器插件提供了一种沉浸式的单元格编辑体验。通过禅编辑器，你可以轻松地以文档编辑器的形式在单元格中编辑文本、图片、链接等内容。
 
