--- a/src/docs/guides/doc/features/thread-comment.zh-CN.mdx
+++ b/src/docs/guides/doc/features/thread-comment.zh-CN.mdx
@@ -3,21 +3,21 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 # 评论 / 批注
 
-<BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.SHEET} />
+<BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.DOC} />
 
-评论 / 批注插件提供了对单元格进行评论或者批注的功能。
+评论 / 批注插件提供对文档的评论和批注功能。
 
 ## 安装
 
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs/sheets-thread-comment-base @univerjs/sheets-thread-comment @univerjs/thread-comment @univerjs/thread-comment-ui
+    pnpm add @univerjs/docs-thread-comment-ui @univerjs/thread-comment @univerjs/thread-comment-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs/sheets-thread-comment-base @univerjs/sheets-thread-comment @univerjs/thread-comment @univerjs/thread-comment-ui
+    npm install @univerjs/docs-thread-comment-ui @univerjs/thread-comment @univerjs/thread-comment-ui
     ```
   </Tabs.Tab>
 </Tabs>
@@ -27,10 +27,9 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 ```typescript
 import '@univerjs/thread-comment-ui/lib/index.css';
 
-import { IThreadCommentMentionDataService, UniverThreadCommentUIPlugin } from '@univerjs/thread-comment-ui';
 import { UniverThreadCommentPlugin } from '@univerjs/thread-comment';
-import { UniverSheetsThreadCommentBasePlugin } from '@univerjs/sheets-thread-comment-base';
-import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment';
+import { UniverThreadCommentUIPlugin } from '@univerjs/thread-comment-ui';
+import { UniverDocsThreadCommentUIPlugin } from '@univerjs/docs-thread-comment-ui';
 ```
 
 ## 国际化
@@ -38,7 +37,6 @@ import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core';
 import ThreadCommentUIZhCN from '@univerjs/thread-comment-ui/locale/zh-CN';
-import SheetsThreadCommentZhCN from '@univerjs/sheets-thread-comment/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
@@ -46,7 +44,6 @@ const univer = new Univer({
   locales: {
     [LocaleType.ZH_CN]: Tools.deepMerge(
       ThreadCommentUIZhCN,
-      SheetsThreadCommentZhCN
     ),
   },
 });
@@ -55,6 +52,8 @@ const univer = new Univer({
 ## 注册
 
 ```typescript
+import { UserManagerService } from '@univerjs/core'
+
 const mockUser = {
   userID: 'mockId',
   name: 'MockUser',
@@ -63,31 +62,10 @@ const mockUser = {
   canBindAnonymous: false,
 };
 
-class CustomMentionDataService implements IThreadCommentMentionDataService {
-  trigger: string = '@';
-
-  async getMentions(search: string) {
-    return [
-      {
-        id: mockUser.userID,
-        label: mockUser.name,
-        type: 'user',
-        icon: mockUser.avatar,
-      },
-      {
-        id: '2',
-        label: 'User2',
-        type: 'user',
-        icon: mockUser.avatar,
-      },
-    ];
-  }
-}
+const injector = univer.__getInjector();
+const userManagerService = injector.get(UserManagerService);
 
 univer.registerPlugin(UniverThreadCommentPlugin);
-univer.registerPlugin(UniverThreadCommentUIPlugin, {
-    overrides: [[IThreadCommentMentionDataService, { useClass: CustomMentionDataService }]],
-});
-univer.registerPlugin(UniverSheetsThreadCommentBasePlugin);
-univer.registerPlugin(UniverSheetsThreadCommentPlugin);
+univer.registerPlugin(UniverThreadCommentUIPlugin);
+univer.registerPlugin(UniverDocsThreadCommentUIPlugin);
 ```
