chore: update docker document

--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -23,7 +23,7 @@ Our architecture is built on PostgreSQL and RabbitMQ.
 Compatible with Linux, Mac, and Windows/WSL environments.
 
 ```
-sh -c "$(curl -fsSL https://raw.githubusercontent.com/dream-num/helm-charts/main/install.sh)"
+bash -c "$(curl -fsSL https://raw.githubusercontent.com/dream-num/helm-charts/main/install.sh)"
 ```
 
 Confirm that the document service has successfully started.
