--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -23,7 +23,7 @@ PostgreSQL + RabbitMQ
 系统环境：Linux、Mac、Windows(WSL/Git Bash)
 
 ```
-sh -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
+bash -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
 ```
 
 打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）。
