--- a/src/docs/guides/doc/features/thread-comment.en-US.mdx
+++ b/src/docs/guides/doc/features/thread-comment.en-US.mdx
@@ -3,21 +3,21 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 # Comment / Annotation
 
-<BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.SHEET} />
+<BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.DOC} />
 
-The Comment / Annotation plugin provides the ability to comment or annotate cells.
+The Comment / Annotation plugin provides the ability to comment or annotate documents.
 
 ## Installation
 
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs/sheets-thread-comment-base @univerjs/sheets-thread-comment @univerjs/thread-comment @univerjs/thread-comment-ui
+    pnpm add @univerjs/docs-thread-comment-ui @univerjs/thread-comment @univerjs/thread-comment-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs/sheets-thread-comment-base @univerjs/sheets-thread-comment @univerjs/thread-comment @univerjs/thread-comment-ui
+    npm install @univerjs/docs-thread-comment-ui @univerjs/thread-comment @univerjs/thread-comment-ui
     ```
   </Tabs.Tab>
 </Tabs>
@@ -27,10 +27,9 @@ The Comment / Annotation plugin provides the ability to comment or annotate cell
 ```typescript
 import '@univerjs/thread-comment-ui/lib/index.css';
 
-import { IThreadCommentMentionDataService, UniverThreadCommentUIPlugin } from '@univerjs/thread-comment-ui';
 import { UniverThreadCommentPlugin } from '@univerjs/thread-comment';
-import { UniverSheetsThreadCommentBasePlugin } from '@univerjs/sheets-thread-comment-base';
-import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment';
+import { UniverThreadCommentUIPlugin } from '@univerjs/thread-comment-ui';
+import { UniverDocsThreadCommentUIPlugin } from '@univerjs/docs-thread-comment-ui';
 ```
 
 ## Internationalization
@@ -38,7 +37,6 @@ import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core';
 import ThreadCommentUIEnUS from '@univerjs/thread-comment-ui/locale/en-US';
-import SheetsThreadCommentEnUS from '@univerjs/sheets-thread-comment/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
@@ -46,7 +44,6 @@ const univer = new Univer({
   locales: {
     [LocaleType.EN_US]: Tools.deepMerge(
       ThreadCommentUIEnUS,
-      SheetsThreadCommentEnUS
     ),
   },
 });
@@ -55,6 +52,8 @@ const univer = new Univer({
 ## Register
 
 ```typescript
+import { UserManagerService } from '@univerjs/core'
+
 const mockUser = {
   userID: 'mockId',
   name: 'MockUser',
@@ -63,31 +62,10 @@ const mockUser = {
   canBindAnonymous: false,
 };
 
-class CustomMentionDataService implements IThreadCommentMentionDataService {
-  trigger: string = '@';
-
-  async getMentions(search: string) {
-    return [
-      {
-        id: mockUser.userID,
-        label: mockUser.name,
-        type: 'user',
-        icon: mockUser.avatar,
-      },
-      {
-        id: '2',
-        label: 'User2',
-        type: 'user',
-        icon: mockUser.avatar,
-      },
-    ];
-  }
-}
+const injector = univer.__getInjector();
+const userManagerService = injector.get(UserManagerService);
 
 univer.registerPlugin(UniverThreadCommentPlugin);
-univer.registerPlugin(UniverThreadCommentUIPlugin, {
-    overrides: [[IThreadCommentMentionDataService, { useClass: CustomMentionDataService }]],
-});
-univer.registerPlugin(UniverSheetsThreadCommentBasePlugin);
-univer.registerPlugin(UniverSheetsThreadCommentPlugin);
+univer.registerPlugin(UniverThreadCommentUIPlugin);
+univer.registerPlugin(UniverDocsThreadCommentUIPlugin);
 ```
