--- a/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
@@ -64,6 +64,7 @@ const mockUser = {
 };
 
 class CustomMentionDataService implements IThreadCommentMentionDataService {
+  dataSource: Nullable<IThreadCommentMentionDataSource>
   trigger: string = '@';
 
   async getMentions(search: string) {
