--- a/src/docs/guides/sheet/features/permission.en-US.mdx
+++ b/src/docs/guides/sheet/features/permission.en-US.mdx
@@ -8,28 +8,90 @@ Handle permission interception in front-end scenarios. When it detects that ther
 
 ## How to use
 
-For example:
-1. Driven by Command Mode
-Execute the corresponding permission settings through the command mode. Please refer to the [Permission Setting Demo](/playground?title=Permission%20Control) for the code implementation of the worksheet permission settings.
-If you want to set area protection, just modify the driven command and the corresponding parameters. For specific content, please refer to the [code](https://github.com/dream-num/univer/blob/6e2ef32809fbb56397dd6c4d7d7fbd0ed7698e39/packages/sheets/src/commands/commands/add-range-protection.command.ts)
+1. Driven by command mode
+Execute the corresponding permission settings by driving command
+- Worksheet permission code example:
+```typescript
+const commandService = accessor.get(ICommandService);
+const target = getSheetCommandTarget(univerInstanceService);
+if (!target) {
+  return;
+}
+const { unitId, subUnitId } = target;
+commandService.executeCommand(AddWorksheetProtectionMutation.id, {
+  unitId,
+  subUnitId,
+  rule: {
+    permissionId: "2sxcza1",
+    name: "sheet",
+    unitType: 2,
+    unitId,
+    subUnitId,
+  },
+});
+```
 
-2. Calling via facadeAPI
-On the facade instance, we expose an API that can adjust the workbook editing permissions. You can set the workbook's editing permissions by calling this API.
+This demo is to add protection to the worksheet. `permissionId` is a randomly generated unique ID for storing permissions. You need to generate it yourself. `unitType` is the type of the worksheet. You can use the UnitObject enumeration in the warehouse to replace the magic number above. `unitId` is the id of the workbook, and `subUnitId` is the id of the worksheet.
+
+To delete, you can use `DeleteWorksheetProtectionMutation`, the parameters are `unitId` and `subUnitId`
+```typescript
+DeleteWorksheetProtectionMutationParams {
+  unitId: string;
+  subUnitId: string;
+}
+```
+
+- Custom selection permission code example:
+```typescript
+const commandService = accessor.get(ICommandService);
+const selectionManagerService = accessor.get(selectionManagerService);
+const target = getSheetCommandTarget(univerInstanceService);
+if (!target) {
+  return;
+}
+const { unitId, subUnitId } = target;
+const ranges = selectionManagerService..getSelections().map(selection => selection.range);
+commandService.executeCommand(AddRangeProtectionMutation.id, {
+  unitId,
+  subUnitId,
+  rules: [{
+    permissionId: "3xtfxG1",
+    name: "sheet1",
+    unitType: 3,
+    unitId,
+    subUnitId,
+    ranges,
+  }],
+});
+```
+This demo adds protection to a selected area. The parameters here are the same as above, except that there is an additional `ranges` parameter, which is the area you selected.
+
+To delete, you can use `DeleteRangeProtectionMutation`, the parameters are `unitId` and `subUnitId` and the ruleIds you want to delete in batches.
+```typescript
+DeleteRangeProtectionMutationParams {
+  unitId: string;
+  subUnitId: string;
+  ruleIds: string[]
+}
+```
+- workbook permission
+Currently, the overall permissions of a workbook are not set through mutations, but are modified directly through the API. Therefore, we provide a FacadeAPI. On the facade instance, we expose an API that can adjust the edit permissions of a workbook. You can set the edit permissions of a workbook by calling this API.
 ```typescript
 import { FUniver } from "@univerjs/facade";
 
 const univerAPI = FUniver.newAPI(univer);
 ```
-Then you can use Univer by calling methods of univerAPI, such as setting the entire workbook to be non-editable:
+
+Then you can use Univer by calling the `univerAPI` method and set the entire workbook to be uneditable:
 
 ```typescript
 univerAPI.setWorkbookEditable(false);
 ```
-Essentially, it controls the permission switch by setting the value of the permission point. The command corresponding to the permission point will read the value of the point before execution. If the permission value is false, the command execution will be terminated.
 
-3. Extended Use
+The essence is to control the switch of permissions by setting the value of the permission point. The command corresponding to the permission point will read the value of the point before execution. If the permission value is false, the execution of the command will be terminated.
 
-Here is an example of `WorkbookEditablePermission`. You can add permission verification in your own plugin, and other points are similar.
+2. Extended usage
+Here we take `WorkbookEditablePermission` as an example and add permission verification in your own plug-in. Other points are similar.
 
 ```typescript
 import { WorkbookEditablePermission } from '@univerjs/sheets';
@@ -49,6 +111,8 @@ class YourService {
   }
 }
 ```
+
+你也可以拓展修改别得权限点位来实现对不同功能的权限控制，具体点位列表请参考文章底部。
 
 ### How to extend the permission point
 
