--- a/src/docs/guides/sheet/features/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/permission.zh-CN.mdx
@@ -4,17 +4,13 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
-是用来处理前端场景的权限拦截，当发现没有对应点位权限的时候，会终止代码执行并提示用户缺失权限。
+是用来处理前端场景的权限拦截，当发现没有对应操作权限的时候，会终止代码执行并提示用户缺失权限。例如你可以在一片选区内设置区域保护，就可以设置其他协作者在该保护范围内是否可以使用编辑、阅读、复制、筛选等等。
 
 ## 如何使用
 
-1. 通过命令模式驱动
+### 工作簿权限
 
-通过驱动command来执行对应的权限设置，请参考 [权限设置demo](/playground?title=Permission%20Control) 中关于工作表权限设置的代码实现。
-
-如果你想设置区域保护，只需修改驱动的command以及对应的参数，具体内容请参考 [code](https://github.com/dream-num/univer/blob/6e2ef32809fbb56397dd6c4d7d7fbd0ed7698e39/packages/sheets/src/commands/commands/add-range-protection.command.ts)
-
-2. 通过facadeAPI来调用，在facade实例上，我们暴露了一个可调节工作簿编辑权限的API，你可以通过调用这个API来设置工作簿的编辑权限。
+目前工作簿的整体权限不通过 `mutation` 设置，是直接通过 API 来修改权限点位，我们提供了 [Facade API](/guides/sheet/facade/facade)，你可以通过调用这个 API 来设置工作簿的编辑权限。
 
 ```typescript
 import { FUniver } from "@univerjs/facade";
@@ -22,15 +18,88 @@ import { FUniver } from "@univerjs/facade";
 const univerAPI = FUniver.newAPI(univer);
 ```
 
-然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，例如设置整体工作簿不可编辑：
+然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，设置整体工作簿不可编辑：
 
 ```typescript
 univerAPI.setWorkbookEditable(false);
 ```
 
+### 工作表权限代码示例
+
+工作表和选区相关的权限设置通过命令模式来执行
+
+```typescript
+const commandService = accessor.get(ICommandService);
+const target = getSheetCommandTarget(univerInstanceService);
+if (!target) {
+  return;
+}
+const { unitId, subUnitId } = target;
+commandService.executeCommand(AddWorksheetProtectionMutation.id, {
+  unitId,
+  subUnitId,
+  rule: {
+    permissionId: "2sxcza1",
+    name: "sheet",
+    unitType: 2,
+    unitId,
+    subUnitId,
+  },
+});
+```
+
+这个 demo 是给工作表添加保护，`permissionId` 需要自己生成的唯一 Id 用来存储权限，`unitType` 是工作表的类型，你可以使用仓库中的 UnitObject 枚举来替换上面的魔法数，`unitId` 是工作簿的id，`subUnitId` 是工作表的 id。   
+
+删除已经存在的工作表权限可以使用 `DeleteWorksheetProtectionMutation`, 参数是 `unitId` 和 `subUnitId`。
+
+```typescript
+DeleteWorksheetProtectionMutationParams {
+  unitId: string;
+  subUnitId: string;
+}
+```
+
+### 自定义选区权限代码示例
+
+```typescript
+const commandService = accessor.get(ICommandService);
+const selectionManagerService = accessor.get(selectionManagerService);
+const target = getSheetCommandTarget(univerInstanceService);
+if (!target) {
+  return;
+}
+const { unitId, subUnitId } = target;
+const ranges = selectionManagerService..getSelections().map(selection => selection.range);
+commandService.executeCommand(AddRangeProtectionMutation.id, {
+  unitId,
+  subUnitId,
+  rules: [{
+    permissionId: "3xtfxG1",
+    name: "sheet1",
+    unitType: 3,
+    unitId,
+    subUnitId,
+    ranges,
+  }],
+});
+```
+
+这个 demo 是给自定义选区添加权限保护，这里面的参数和上面的一样，只是多了一个 `ranges` 参数，这个参数是你选中的区域。   
+
+删除已经存在的自定义区域保护可以使用 `DeleteRangeProtectionMutation`，参数是 `unitId` 和 `subUnitId` 以及想批量删除的 `ruleIds`。
+
+```typescript
+DeleteRangeProtectionMutationParams {
+  unitId: string;
+  subUnitId: string;
+  ruleIds: string[];
+}
+```
+
+
 本质是通过设置权限点位的值来控制权限的开关，权限点位对应的command在执行前会去读取该点位的值，假如权限值为false，则会终止command的执行。
 
-3. 拓展使用
+## 拓展使用
 
 这里以`WorkbookEditablePermission`举例，在自己的插件中增加权限校验，其他点位类似
 
