docs(blog): remove expired links

--- a/src/docs/blog/post/this-is-univer.en-US.mdx
+++ b/src/docs/blog/post/this-is-univer.en-US.mdx
@@ -592,6 +592,6 @@ The above completes the entire process from event triggering to modifying the mo
 
 ## 5. Further Reading
 
-If you wish to have an overall understanding of the architecture, I recommend reading [Architecture Notes Overview of Architecture](https://github.com/dream-num/univer/blob/dev/docs/zh/achitecture.md#architecture-notes-%E6%9E%B6%E6%9E%84%E6%A6%82%E8%A6%81). If you want to learn more about the architecture of the sheet and the design and responsibilities of various modules, I recommend reading [Univer Sheet Architecture - Univer Sheet Architecture](https://github.com/dream-num/univer/blob/dev/docs/zh/sheet-architecture.md#univer-sheet-architecture---univer-sheet-%E6%9E%B6%E6%9E%84). If you are unfamiliar with the DI system, I suggest reading the DI framework [redi](https://redi.wendell.fun/zh-CN/docs/introduction) used in the Univer project. The project uses Rxjs as an observer pattern, and reading the [Rxjs documentation](https://rxjs.tech/guide/overview) is a quick way to become familiar with Rxjs.
+If you wish to have an overall understanding of the architecture, I recommend reading [Univer Architecture](/guides/sheet/architecture/univer). If you are unfamiliar with the DI system, I suggest reading the DI framework [redi](https://redi.wendell.fun/zh-CN/docs/introduction) used in the Univer project. The project uses Rxjs as an observer pattern, and reading the [Rxjs documentation](https://rxjs.tech/guide/overview) is a quick way to become familiar with Rxjs.
 
 <p className="text-gray-500 text-sm mt-8">Author: [Jocs](https://github.com/Jocs), Creator of [MarkText](https://github.com/marktext/marktext), Core Developer at Univer, responsible for Univer Doc architecture and development.</p>
