--- a/src/docs/blog/post/this-is-univer.zh-CN.mdx
+++ b/src/docs/blog/post/this-is-univer.zh-CN.mdx
@@ -590,6 +590,6 @@ private _commandExecutedListener() {
 
 ## 伍. 更多阅读
 
-如果你想对架构有个整体的了解，推荐阅读[Architecture Notes 架构概要](https://github.com/dream-num/univer/blob/dev/docs/zh/achitecture.md#architecture-notes-%E6%9E%B6%E6%9E%84%E6%A6%82%E8%A6%81)，如果你想了解更多 sheet 的架构和各个模块的设计和职责，推荐阅读[Univer Sheet Architecture - Univer Sheet 架构](https://github.com/dream-num/univer/blob/dev/docs/zh/sheet-architecture.md#univer-sheet-architecture---univer-sheet-%E6%9E%B6%E6%9E%84)。如果你对 DI 系统比较陌生，建议 阅读 Univer 项目中所使用的 DI 框架 [redi](https://redi.wendell.fun/zh-CN/docs/introduction)。项目使用 Rxjs 作为观察者模式，阅读 [Rxjs 相关文档](https://rxjs.tech/guide/overview) 是快速熟悉 Rxjs 的方式
+如果你想对架构有个整体的了解，推荐阅读[Univer 架构](/zh-CN/guides/sheet/architecture/univer)。如果你对 DI 系统比较陌生，建议 阅读 Univer 项目中所使用的 DI 框架 [redi](https://redi.wendell.fun/zh-CN/docs/introduction)。项目使用 Rxjs 作为观察者模式，阅读 [Rxjs 相关文档](https://rxjs.tech/guide/overview) 是快速熟悉 Rxjs 的方式
 
 <p className="text-gray-500 text-sm mt-8">作者： [Jocs](https://github.com/Jocs)，[MarkText](https://github.com/marktext/marktext) 作者，Univer 核心开发者，负责 Univer Doc 架构及开发</p>
