--- a/src/docs/guides/slide/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/slide/getting-started/installation.en-US.mdx
@@ -16,13 +16,13 @@ We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](ht
 
 To facilitate the deployment of Univer's frontend, a variety of npm packages are utilized. You may install the requisite packages based on your specific requirements.
 
-The following example will guide you through which plugins are necessary and how to install them:
-
 <Callout>
   - If you are using npm, make sure you are using npm@7 or higher. This is because npm@3 ~ npm@6 will not correctly install `peerDependencies`[^1].
   - If you are using pnpm, make sure you are using pnpm@8 or higher. If you are using pnpm@6 ~ pnpm@7, you can try configuring `auto-install-peers=true` [^2] to resolve dependency installation issues.
   - Known issue: yarn does not support automatic installation of `peerDependencies`[^3], and there seems to be no reliable solution. Please manually install the missing dependencies according to the console prompts.
 </Callout>
+
+The following example will guide you through which plugins are necessary and how to install them:
 
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
@@ -54,13 +54,22 @@ If you want to get a more convenient development experience in the future, we al
 
 For more information about `@univerjs/facade`, please refer to the [Facade](/guides/slides/facade/facade) section.
 
+### Update
+
+Since Univer uses a monorepo to manage its codebase, each release will update the version number of all official plugins. Therefore, when updating Univer, you should update all plugins at the same time to ensure that their version numbers are consistent.
+
+If you are using pnpm, you can use the following command to update all plugins:
+
+```shell
+pnpm update "@univerjs/*"@latest
+```
+
 ### Usage
 
 <Callout>
   The order of importing the style files is important. Make sure you import the CSS styles of `@univerjs/design` and `@univerjs/ui` before importing the CSS styles of other plugins.
 </Callout>
 
-{/* 你需要在项目中引入 Univer 的样式文件、语言包，以及一些必要的插件： */}
 You need to import Univer's css files and some necessary plugins in your project:
 
 ```typescript
